# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  15 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Do not run depmod in modules-update if System.map is missing, bug #59188.

  14 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Remove pointless check of depmod existence in modules init.d since the 
    modules-update script checks for it.

    Run kbd_mode earlier for unicode users so initial loadkeys doesn't 
    trigger a warning #94048 by Eugene Pavlovsky.

  13 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    pump-0.8.21-r4 now creates ntp.conf by itself so the ntp.conf creation
    code has been removed from the pump module and helper.

    Moved wpa_supplicant and iwconfig et all from /usr/sbin to /sbin

  12 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    Added dhcp_eth0="nogateway" option, generic to all dhcp clients.
    Fixes #98466

  11 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add fix -r to unmount to be -n .. bug #98667, thanks to Patrick McLean.

  11 Jul 2005; Roy Marples <uberlord@gentoo.org>:

    udhcpc/dhclient helpers no longer flush IPv6 addresses - fixes #98539

    wpa_supplicant now marks service as stopped when using wpa_supplicant-0.4.x
    and we have associated but failed to configure in the background.

  09 Jul 2005; Mike Frysinger <vapier@gentoo.org>:

    Only remount the / filesystem readonly if it isn't already and don't 
    screw around with net filesystems #98405 in init.d/checkroot.

    Add support for completely wiping out /tmp and in general clean up
    the bootmisc file #56592.

    Add back in support for mounting usbfs under usbgid #35860.

  09 Jul 2005; Martin Schlemmer <azarah@gentoo.org>:

    Add workaround for evms device names and 'RC_DEVICE_TARBALL="yes"'.  Patch
    by Olaf Niermann, bug #95799.

  07 Jul 2005; Roy Marples <uberlord@gentoo.org>:
